# bevy_rapier

./: Cargo.toml
bevy_rapier2d/: Cargo.toml
bevy_rapier3d/: Cargo.toml
bevy_rapier3d/examples/: boxes3.rs  contact_filter3.rs  despawn3.rs  events3.rs  joints3.rs  joints_despawn3.rs  locked_rotations3.rs  multiple_colliders3.rs  ray_casting3.rs  static_trimesh3.rs  trimesh_collider.rs  trimesh_collider_pipelined.rs
src/: lib.rs
src/physics/: collider_component_set.rs  mesh_collider.rs  mod.rs  resources.rs  rigid_body_component_set.rs
src/render/: components.rs  plugins.rs  systems.rs
src_debug_ui/: plugins.rs  systems.rs
