[package]
name = "bevy_rapier2d"
version = "0.10.2"
authors = ["Sébastien Crozet <developer@crozet.re>"]
description = "2-dimensional physics engine in Rust, official Bevy plugin."
documentation = "http://docs.rs/bevy_rapier2d"
homepage = "http://rapier.rs"
repository = "https://github.com/dimforge/bevy_rapier"
readme = "README.md"
keywords = [ "physics", "dynamics", "rigid", "real-time", "joints" ]
license = "Apache-2.0"
edition = "2018"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
path = "../src/lib.rs"
required-features = [ "dim2" ]

[features]
default = [ "dim2", "render" ]
dim2 = []
render = [ "bevy/render" ]
parallel = [ "rapier2d/parallel" ]
simd-stable = [ "rapier2d/simd-stable" ]
simd-nightly = [ "rapier2d/simd-nightly" ]
wasm-bindgen = [ "rapier2d/wasm-bindgen" ]
serde-serialize = [ "rapier2d/serde-serialize" ]
enhanced-determinism = [ "rapier2d/enhanced-determinism" ]

[dependencies]
bevy = { git = "https://github.com/cart/bevy", branch = "pipelined-rendering", default-features = false, features=[ "bevy_render2", "bevy_pbr2", "bevy_core_pipeline"] }
nalgebra = { version = "0.27", features = [ "convert-glam015" ] }
# Don't enable the default features because we don't need the ColliderSet/RigidBodySet
rapier2d = { version = "^0.9.2", default-features = false, features = [ "dim2", "f32" ] }

[dev-dependencies]
bevy_wgpu = { git = "https://github.com/cart/bevy", branch = "pipelined-rendering" }
bevy_winit = { git = "https://github.com/cart/bevy", branch = "pipelined-rendering", features = [ "x11" ] }
oorandom = "11"