[package]
name = "bevy_rapier3d"
version = "0.10.2"
authors = ["Sébastien Crozet <developer@crozet.re>"]
description = "3-dimensional physics engine in Rust, official Bevy plugin."
documentation = "http://docs.rs/bevy_rapier3d"
homepage = "http://rapier.rs"
repository = "https://github.com/dimforge/bevy_rapier"
readme = "README.md"
keywords = [ "physics", "dynamics", "rigid", "real-time", "joints" ]
license = "Apache-2.0"
edition = "2018"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
path = "../src/lib.rs"
required-features = [ "dim3" ]

[features]
default = [ "dim3", "render" ]
dim3 = []
render = [ "bevy/render" ]
parallel = [ "rapier3d/parallel" ]
simd-stable = [ "rapier3d/simd-stable" ]
simd-nightly = [ "rapier3d/simd-nightly" ]
wasm-bindgen = [ "rapier3d/wasm-bindgen" ]
serde-serialize = [ "rapier3d/serde-serialize" ]
enhanced-determinism = [ "rapier3d/enhanced-determinism" ]

[dependencies]
# bevy = { version = "0.5", default-features = false }
bevy = { path="C:\\Users\\swulb\\gamedev\\bevy", default-features = false }
nalgebra = { version = "0.27", features = [ "convert-glam015" ] }
# Don't enable the default features because we don't need the ColliderSet/RigidBodySet
rapier3d = { version = "^0.9.2", default-features = false, features = [ "dim3", "f32" ] }

[dev-dependencies]
bevy = { path="C:\\Users\\swulb\\gamedev\\bevy",features=["bevy_gltf"] }

bevy_wgpu = { git = "https://github.com/cart/bevy", branch = "pipelined-rendering" }
bevy_winit = { git = "https://github.com/cart/bevy", branch = "pipelined-rendering", features = [ "x11" ] }
